--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
 	"license": "MIT",
 	"author": {
 		"email": "692425987@qq.com",
-		"name":"da huang",
-		"url":""
+		"name":"da huang"
 	},
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/make-in-china/vscode-turtle"
     },
 	"bugs":{
-		"url": "",
+		"url": "https://github.com/make-in-china/vscode-turtle/issues",
         "email": "692425987@qq.com"
 	},
 	"engines": {
@@ -26,7 +25,7 @@
         "Themes"
     ],
     "preview": true,
-    "homepage": "",
+    "homepage": "https://github.com/make-in-china/vscode-turtle",
 	"icon": "images/logo.png",
 	// "galleryBanner": {
     //     "color": "#ffdd00"
@@ -56,14 +55,6 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        // "eslint": "^2.10.2",
-        // "eslint-config-airbnb": "^9.0.1",
-        // "eslint-plugin-import": "^1.8.0",
-        // "eslint-plugin-jsx-a11y": "^1.2.0",
-        // "eslint-plugin-react": "^5.1.1",
-        // "mustache": "^2.2.1",
-        // "ncp": "^2.0.0",
-        // "underscore": "^1.8.3",
         "vscode": "^0.11.0"
     },
     "dependencies": {
