--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "vscode-turtle",
-	"description": "vscode-turtle",
-	"displayName": "vscode-turtle",
-	"version": "0.0.1",
-	"publisher": "da huang",
+	"displayName": "Vscode-Turtle",
+	"description": "Turtle for Visual Studio Code",
+	"version": "1.0.3",
+	"publisher": "feihuangtengda",
 	"license": "MIT",
 	"author": {
 		"email": "692425987@qq.com",
@@ -27,9 +27,9 @@
     "preview": true,
     "homepage": "https://github.com/make-in-china/vscode-turtle",
 	"icon": "images/logo.png",
-	// "galleryBanner": {
-    //     "color": "#ffdd00"
-    // },
+	"galleryBanner": {
+        "color": "#ffdd00"
+    },
 	"activationEvents": [
 		"*"
 	],
@@ -49,7 +49,6 @@
                 "title": "Turtle Update"
             }
         ]
-		
 	},
     "scripts": {
         "postinstall": "node ./node_modules/vscode/bin/install"
