--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-turtle",
 	"displayName": "Vscode-Turtle",
 	"description": "Turtle for Visual Studio Code",
-	"version": "1.0.5",
+	"version": "1.0.12",
 	"publisher": "feihuangtengda",
 	"license": "MIT",
 	"author": {
@@ -57,6 +57,7 @@
         "vscode": "^0.11.0"
     },
     "dependencies": {
+        "moment": "^2.10.0",
         "extract-zip": "^1.5.0",
         "request": "^2.72.0",
         "replace-in-file": "^1.1.3"
