--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,4 +8,85 @@ GulpFile.js
 typings/*
 .vscode/*
 LICENSE
-.gitignore/*
+.gitignore
+node_modules/*
+!node_modules/.bin
+!node_modules/ansi-regex
+!node_modules/ansi-styles
+!node_modules/asn1
+!node_modules/assert-plus
+!node_modules/async
+!node_modules/aws-sign2
+!node_modules/aws4
+!node_modules/balanced-match
+!node_modules/bcrypt-pbkdf
+!node_modules/bl
+!node_modules/boom
+!node_modules/brace-expansion
+!node_modules/caseless
+!node_modules/chalk
+!node_modules/combined-stream
+!node_modules/commander
+!node_modules/concat-map
+!node_modules/concat-stream
+!node_modules/cryptiles
+!node_modules/dashdash
+!node_modules/delayed-stream
+!node_modules/ecc-jsbn
+!node_modules/escape-string-regexp
+!node_modules/extract-zip
+!node_modules/extsprintf
+!node_modules/forever-agent
+!node_modules/form-data
+!node_modules/fs.realpath
+!node_modules/generate-function
+!node_modules/generate-object-property
+!node_modules/getpass
+!node_modules/glob
+!node_modules/graceful-readlink
+!node_modules/har-validator
+!node_modules/has-ansi
+!node_modules/hawk
+!node_modules/hoek
+!node_modules/http-signature
+!node_modules/inflight
+!node_modules/is-my-json-valid
+!node_modules/is-property
+!node_modules/is-typedarray
+!node_modules/isstream
+!node_modules/jodid25519
+!node_modules/jsbn
+!node_modules/json-schema
+!node_modules/json-stringify-safe
+!node_modules/jsonpointer
+!node_modules/jsprim
+!node_modules/lodash
+!node_modules/mime-db
+!node_modules/mime-types
+!node_modules/minimist
+!node_modules/mkdirp
+!node_modules/moment
+!node_modules/node-uuid
+!node_modules/oauth-sign
+!node_modules/once
+!node_modules/pend
+!node_modules/pinkie
+!node_modules/pinkie-promise
+!node_modules/process-nextick-args
+!node_modules/qs
+!node_modules/readable-stream
+!node_modules/replace-in-file
+!node_modules/request
+!node_modules/sntp
+!node_modules/sshpk
+!node_modules/stringstream
+!node_modules/strip-ansi
+!node_modules/supports-color
+!node_modules/tough-cookie
+!node_modules/tunnel-agent
+!node_modules/tweetnacl
+!node_modules/typedarray
+!node_modules/util-deprecate
+!node_modules/verror
+!node_modules/wrappy
+!node_modules/xtend
