--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-turtle",
 	"displayName": "Vscode-Turtle",
 	"description": "Turtle for Visual Studio Code",
-	"version": "1.0.25",
+	"version": "1.0.29",
 	"publisher": "feihuangtengda",
 	"license": "MIT",
 	"author": {
@@ -51,6 +51,7 @@
         ]
 	},
     "scripts": {
+        "vscode:prepublish": "gulp tsc",
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
